# DistributedDocumentEditor

./: README.md
distributed_doc_system/: Cargo.toml
distributed_doc_system/src/: main.rs
distributed_doc_system/src/models/: document.rs  documents.rs  message.rs  mod.rs
distributed_doc_system/src/services/: doc_server.rs  handlers.rs  mod.rs
