[package]
name = "distributed_doc_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
zenoh = "1.0.2"
futures = "0.3"